--- a/spec/fixtures/vcr_cassettes/spectral_wave_summaries_station_not_found.yml
+++ b/spec/fixtures/vcr_cassettes/spectral_wave_summaries_station_not_found.yml
@@ -84,4 +84,48 @@ http_interactions:
         </body></html>
     http_version: 
   recorded_at: Sun, 10 Sep 2017 14:52:33 GMT
+- request:
+    method: get
+    uri: https://www.ndbc.noaa.gov/data/realtime2/00000.spec
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 404
+      message: Not Found
+    headers:
+      Date:
+      - Sat, 30 Jun 2018 22:11:54 GMT
+      Server:
+      - Apache
+      Strict-Transport-Security:
+      - max-age=31536000;
+      Vary:
+      - Accept-Encoding
+      Content-Length:
+      - '191'
+      Connection:
+      - close
+      Content-Type:
+      - text/html; charset=iso-8859-1
+    body:
+      encoding: ASCII-8BIT
+      string: |
+        <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
+        <html><head>
+        <title>404 Not Found</title>
+        </head><body>
+        <h1>Not Found</h1>
+        <p>The requested URL /data/realtime2/00000.spec was not found on this server.</p>
+        </body></html>
+    http_version: 
+  recorded_at: Sat, 30 Jun 2018 22:11:54 GMT
 recorded_with: VCR 2.9.3
